# platform-celery-backend-test

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  buildtrigger.yaml  controllers.py  docker-compose.yml  main.py  main_service.py  pyproject.toml  tasks.py
.github/workflows/: build.yml  update_repos.yml
celery/: tasks.py
controllers/: controllers.py  healthz.py
factory/: main_factory.py
main_service/: main_queue_routes.py  main_service_functions.py  main_service_routes.py  models.py
main_service/tests/: test_main_service.py
tests_integration/: conftest.py  test_flask_healthz.py  test_health.py  test_main_service.py  test_service.py
tests_unit/: test_example.py
