[tool.poetry]
name = "r2-factory-platform-framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
Flask = "2.0.3"
gunicorn = "^20.1.0"
flask-healthz = "^0.0.3"
Flask-Cors = "^3.0.10"
celery = "5.2.3"
redis = "4.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
